apps/filebrowser/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: halo
spec:
  selector:
    app: filebrowser
  ports:
    - port: 80
      targetPort: 80
